Fixed activity spacings

--- a/app/client/stylesheets/components/compositions/pu-composition-startpartup-activities.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-startpartup-activities.sass
@@ -13,5 +13,5 @@
         margin: 0
 
     .pu-activity-create
-        margin-top: 40px
-        margin-bottom: 40px
+        margin-top: 40px - 15px
+        margin-bottom: 40px + 2px
