--- a/app/client/stylesheets/components/pu-block.sass
+++ b/app/client/stylesheets/components/pu-block.sass
@@ -165,8 +165,18 @@
         &.pu-block-highlighted
             padding: 20px 40px
 
+        .pu-sub-title
+            font-size: 20px
+
         &.pu-block-active
             z-index: 5
+
+        &.pu-activity-form
+            padding: 20px
+
+        &.pu-activity-create
+            padding-left: 40px
+            padding-right: 40px
 
     &-message
         .pu-paragraph
